--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "scripts": {
     "preinstall": "node checkNodeVersion",
     "prestart": "node checkNodeVersion",
-    "start": "react-scripts --openssl-legacy-provider start",
+    "start": "react-scripts start --openssl-legacy-provider",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
